Sep18: feedback from developers

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -24,9 +24,9 @@ Developers are welcome to comment on [this idea](https://github.com/decred/dcrwa
 
 [iOS](https://github.com/raedahgroup/dcrios): @macsleven: "the test version of Decred Wallet for iOS is available, we have a link for installing the app but the builds currently require your UDID. Contact either @macsleven or @raedah with your UDID if you would like to help test."
 
-[dcrdata](https://github.com/decred/dcrdata): v3.0 was released for mainnet! {new features?}. [9 contributors](https://twitter.com/chappjc/status/1039172760143060994) made it happen. Project lead @chappjc [notes](https://twitter.com/chappjc/status/1039173243452772353): "This collaboration with @raedahgroup on our own block explorer and web API for @decredproject has been super productive."
+[dcrdata](https://github.com/decred/dcrdata): v3.0 was released for mainnet! Highlights: [charts](https://explorer.dcrdata.org/charts), "merged debits" view, [agendas](https://explorer.dcrdata.org/agendas) page, Insight API support, side chain tracking, Go 1.11 support with module builds, numerous backend improvements. Full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.0.0). [9 contributors](https://twitter.com/chappjc/status/1039172760143060994) made it happen. Project lead @chappjc [notes](https://twitter.com/chappjc/status/1039173243452772353): "This collaboration with @raedahgroup on our own block explorer and web API for @decredproject has been super productive."
 
-Trezor: proof of concept implementation for trezor-core (model T firmware) is [in the works](https://github.com/trezor/trezor-core/pull/358). {how it differs from prev Trezor work?}
+Trezor: proof of concept implementation for Trezor Model T firmware is [in the works](https://github.com/trezor/trezor-core/pull/358) (previous work was for Model One).
 
 [Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): update to use Go modules, simnet support and several fixes.
 
