Dev: dcrd PR template

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -12,6 +12,8 @@ Currently in review are [initial release](https://github.com/decred/dcrd/pull/14
 
 Educational series for new Decred developers by @matheusd added two episodes: [02 Simnet Setup](https://www.youtube.com/watch?v=QGbsU2PjpLM) shows how to automate simnet management with tmux and [03 Miner Reward Invalidation](https://www.youtube.com/watch?v=ECB8vDzOd1M) explains block validity rules.
 
+Finally, a [pull request template](https://github.com/decred/dcrd/blob/master/.github/pull_request_template.md) with a list of checks was added to help guide the contributors to dcrd.
+
 [dcrwallet](https://github.com/decred/dcrwallet): bugfixes and RPC improvements to support desktop and mobile wallets.
 
 Developers are welcome to comment on [this idea](https://github.com/decred/dcrwallet/issues/1217) to derive stakepool keys from the HD wallet seed. This would eliminate the need to backup and restore redeem scripts, thus greatly improving wallet UX. (missed in July issue)
