--- a/journal/201809.md
+++ b/journal/201809.md
@@ -48,15 +48,11 @@ Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {
 
 ## Network
 
-Hashrate: {start, end, low, high, variation; pool distribution}
+Hashrate: started and ended the month around 75 PH/s, making the low of 60.5 and a new high of 110 PH/s. BeePool is again the leader with their share varied in 23-54%, followed by F2Pool 13-30%, Coinmine 4-6% and Luxor 3-5%. Like previously, there were multiple spikes of unidentified hashrate.
 
-Staking: 30-day avg 98 DCR
+Staking: 30-day average ticket price is 98 DCR (+2.4). The price varied between 95.7 and 101.92 DCR. Locked DCR amount was 3.86-3.96 million DCR, or 45.7-46.5% of the supply.
 
-Nodes: {node counts, version distribution}
-
-Interesting: dcr locked testing 2018 high while we sit at 2018 lows in price https://twitter.com/ImacallyouJawdy/status/1039922979973476352 {or Markets?}
-
-Another int. analysis https://twitter.com/ImacallyouJawdy/status/1046883879880151040
+Nodes: there are 201 public listening nodes and 325 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 5% are v1.4.0(pre) dev builds (+3%), 30% on v1.3.0 (+25%), 42% on v1.2.0 (-20%), 15% on v1.1.2 (-7%), 6% on v1.1.0. More than 76% of nodes run v1.2.0 and higher and therefore support client filters. Data of Oct 1.
 
 ## ASICs
 
@@ -229,6 +225,8 @@ On Sep 6 DCR revisited USD {} / BTC 0.0054 when BTC quickly dropped from USD 730
 As of Sep 7, Decred is #13 by the number of daily active addresses with 10k addresses, and #9 by the USD cost of daily issuance with $180k.
 
 Sep 14 price recovery coincided with KuCoin trading start and hashrate spike to 104 PH/s.
+
+Interesting: dcr locked testing 2018 high while we sit at 2018 lows in price https://twitter.com/ImacallyouJawdy/status/1039922979973476352
 
 ## Relevant External
 
