ASICs and RelExt

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -56,13 +56,13 @@ Nodes: there are 201 public listening nodes and 325 normal nodes per [dcred.eu](
 
 ## ASICs
 
-https://www.reddit.com/r/decred/comments/9fdz9d/psa_do_not_purchase_the_whatsminer_44th_decred/
+Obelisk posted two updates on their [mailing list](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96). 70% of Batch 1 units are shipped, an extensive [user guide](http://support.obelisk.tech/category/28qat7hdvu-user-guide) is available, Obelisk Scanner application was released that allows to automatically [update firmware](http://support.obelisk.tech/article/1blv5te02q-upgrade-your-obelisk-firmware). First firmware update was released and bumped SC1 hashrate by 10-20%, added new pools and fixed multiple bugs. Next update will focus on DCR1. It is worth a special mention that the firmware source code is [now open](https://gitlab.com/NebulousLabs/obelisk-ob1)! Let us hope more manufacturers will follow this example.
 
-https://www.reddit.com/r/decred/comments/9fqfyj/caution_beware_of_announcement_about_dcr_miner/
+Whatsminer D10V1 was [announced](https://twitter.com/whatsminer/status/1042946674602201088) and is available for preorder.
 
-https://twitter.com/whatsminer/status/1042946674602201088 https://whatsminer.net/product/d10v1-44-x-th-s-decred-whatsminer-includes-220v-psu-batch1-ships-december-10/
+A few details about Whatsminer [surfaced](https://www.reddit.com/r/decred/comments/9fdz9d/psa_do_not_purchase_the_whatsminer_44th_decred/e67ktmc/) this month. The real manufacturer is MicroBT, also known as Bitwei and commonly misspelled as Bitewei. [whatsminer.net](https://whatsminer.net/product/d10v1-44-x-th-s-decred-whatsminer-includes-220v-psu-batch1-ships-december-10/) and [pangolinminer.com](https://pangolinminer.com/product/whatsminer-dcr/) are resellers, and the price is $4,198 on both sites. Pangolinminer and [asicminervalue.com](https://www.asicminervalue.com/miners/microbt/whatsminer-d1) now call the unit "Whatsminer D1". There was a bit of controversy on Reddit: first whatsminer.net [warned](https://www.reddit.com/r/decred/comments/9fdz9d/psa_do_not_purchase_the_whatsminer_44th_decred/) our community member against ordering from other sites before an "official announcement", in response Pangolinminer [posted](https://www.reddit.com/r/decred/comments/9fqfyj/caution_beware_of_announcement_about_dcr_miner/) their arguments against whatsminer.net.
 
-Bitmain is finally into the game! https://twitter.com/antminer_main/status/1043844217288699904 https://bitcointalk.org/index.php?topic=5035938.0
+Bitmain has finally [entered](https://twitter.com/antminer_main/status/1043844217288699904) Decred ASIC space with their [Antminer DR3](https://shop.bitmain.com/product/detail?pid=000201809211239039316aJFu5gm069B). Hash rate is 7.8 TH/s while pulling 1410 W, at the price of $673. These specs mean it has the best GH/W and GH/USD of currently sold miners until the Whatsminer or others come out, although its GH/USD of 11.6 already competes with Whatsminer's 10.5. Discussed on [Reddit](https://www.reddit.com/r/decred/comments/9i96ud/bitmain_releases_decred_miner_dr3_78th_for_673usd/) and [bitcointalk](https://bitcointalk.org/index.php?topic=5035938.0), unboxing video [here](https://www.reddit.com/r/decred/comments/9l0n84/bitmain_antminer_dr3_unboxing_review_and_setting/).
 
 ## Integrations
 
@@ -232,6 +232,8 @@ Interesting: dcr locked testing 2018 high while we sit at 2018 lows in price htt
 
 ASIC for Lyra2REv2 was [spotted](https://www.reddit.com/r/vertcoin/comments/9fhiy5/lyra2rev2_asic_supposedly_spotted/) on the web. Vertcoin is preparing their new algorithm, 3 years after the previous [fork](https://medium.com/vertcoin-blog/vertcoin-a-call-to-action-against-asics-f8d47aef895d) to save from botnet domination.
 
+BitFury BTC sheets https://twitter.com/ObeliskTechHQ/status/1042452986570657792
+
 XCAT research https://bitcointalk.org/index.php?topic=4980960.0 reddit https://www.reddit.com/r/decred/comments/9c9c44/anonymous_atomic_swaps_using_homomorphic_hashing/
 
 On Sep 18 Poloniex [announced](https://poloniex.com/press-releases/2018.09.18-Asset-Delistings/) delisting of 8 more assets. That day they took a 12-80% dive showing their dependence on this one exchange. By the way, Poloniex recently added many USDT pairs. Let them know if you would like DCR to receive one.
@@ -243,6 +245,8 @@ https://virtualmarkets.ag.ny.gov/
 > Importantly, while Bittrex is the only participating platform not to offer volume discounts to high-volume customers, bitFlyer USA, Bitstamp, Gemini, HBUS, and itBit disclosed to the OAG that certain traders may receive different, and presumably preferential, pricing according to the terms of confidential bilateral agreements, the details of which are not disclosed in public fee schedules.
 
 A vulnerability in BitcoinCore. btt, amateur, core voiced their concerns about using multiple impls. Worth noting that Decred's vision is quite the opposite: more full node implementations is strength, just like for any Internet protocol.
+
+Coinbase listing process , discussed https://www.reddit.com/r/decred/comments/9j4mv5/is_decred_going_to_fill_out_the_application_to/
 
 ## About This Issue
 
