--- a/journal/201809.md
+++ b/journal/201809.md
@@ -66,34 +66,19 @@ Bitmain has finally [entered](https://twitter.com/antminer_main/status/104384421
 
 ## Integrations
 
-decredvoting.com new VSP https://github.com/decred/dcrwebapi/pull/34 by @David reddit https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/ with ticket splitting https://decredvoting.com/ticketsplitting! second after decred brasil {get brasil info}, operated by @david, fees are 2%.
+Meet our 17th voting service provider: [decredvoting.com](https://decredvoting.com/). Operated by [@david](https://decred.slack.com/team/U0RTS3P98), it has 2% fee and is the second provider after [decredbrasil.com](https://stake.decredbrasil.com/) to support [ticket splitting](https://decredvoting.com/ticketsplitting). Reddit thread is [here](https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/).
 
-KuCoin DCR/BTC DCR/ETH
-* https://news.kucoin.com/en/decred-dcr-gets-listed-on-kucoin/
-* https://twitter.com/kucoincom/status/1039791422801494016
-* https://twitter.com/decredproject/status/1040172455216594944
-* trading fees discount https://twitter.com/KuCoinUpdates/status/1040571460706861056
-* https://news.kucoin.com/en/99-discount-over-the-trading-fees-on-dcr-trading-pairs/
-* https://news.bitcoin.com/ku-coin-expands-into-australia-after-3m-bitcoin-australia-deal/
+[KuCoin](https://www.kucoin.com/) exchange [listed](https://news.kucoin.com/en/decred-dcr-gets-listed-on-kucoin/) DCR/BTC and DCR/ETH pairs. To celebrate their anniversary they had a 99% trading fees [discount](https://news.kucoin.com/en/99-discount-over-the-trading-fees-on-dcr-trading-pairs/) on DCR pairs for 2 weeks.
 
-https://www.reddit.com/r/decred/comments/9f7nga/decred_is_now_available_on_changenows_android_app/
+Three more wallets integrated Decred in September:
 
-speculation https://www.bitguru.co.uk/crypto-news/coinbase-error-shows-44-additional-cryptocurrencies-on-the-app/
-top 50
-https://twitter.com/coinbase/status/1045813201508524032
-https://www.coinbase.com/price
-interestingly, Decred is #25 on the Coinbase list while it is #30 on coinmarketcap.
+* [Atomic](https://atomicwallet.io/) desktop [added](https://twitter.com/atomicwallet/status/1042032573168476160) Decred in version 0.1.31. The team [answered](https://www.reddit.com/r/decred/comments/9igvgg/warm_welcome_decred_in_atomic_swap_wallet/e6lki2j/) many questions on Reddit. 
+* [AnyBit](https://www.anybit.io/) wallet [added](https://twitter.com/decredproject/status/1043228642992640000) Decred. Notably, source code is open for their [Android](https://github.com/AnyBitIO/anybit-Android) and [iOS](https://github.com/AnyBitIO/anybit-iOS) wallets.
+* [Cobo](https://cobo.com/) wallet [added](https://twitter.com/decredproject/status/1045765231157399554) Decred support into their Android and iOS wallets.
 
-{promo or new features? https://twitter.com/exodus_io/status/1039831059347775490}
+ChangeNow [announced](https://www.reddit.com/r/decred/comments/9f7nga/decred_is_now_available_on_changenows_android_app/) Decred addition to their Android app that does accountless swaps.
 
-bitbill 3.0 android https://twitter.com/bitbillwallet/status/1038326894649720832 {decred?}
-
-Atomic Wallet 0.1.31 added DCR https://twitter.com/atomicwallet/status/1042032573168476160 https://twitter.com/decredproject/status/1043575121271836672
-team answered many questions on reddit https://old.reddit.com/r/decred/comments/9igvgg/warm_welcome_decred_in_atomic_swap_wallet/
-
-AnyBill https://www.anybit.io/ Chinese open source wallet https://github.com/AnyBitIO Android iOS https://twitter.com/decredproject/status/1043228642992640000
-
-[Cobo](https://cobo.com/) wallet for Android and iOS added Decred support. https://twitter.com/decredproject/status/1045765231157399554
+Coinbase [launched](https://twitter.com/coinbase/status/1045813201508524032) informational [asset pages](https://blog.coinbase.com/experimenting-with-educational-asset-pages-b0b4d54b887b) for top 50 coins by market cap, which includes Decred. First the pages [started showing](https://www.bitguru.co.uk/crypto-news/coinbase-error-shows-44-additional-cryptocurrencies-on-the-app/) in the Coinbase app for a small group of testers, and later they released their [price dashboard](https://www.coinbase.com/price). Interestingly, Decred is #25 on that list while it is #30 on [coinmarketcap](https://coinmarketcap.com/) as of writing.
 
 ## Adoption
 
