--- a/journal/201809.md
+++ b/journal/201809.md
@@ -38,7 +38,7 @@ Trezor: proof of concept implementation for Trezor Model T firmware is [in the w
 
 [docs](https://github.com/decred/dcrdocs): beginner's guide [overhaul](https://github.com/decred/dcrdocs/pull/587), multiple fixes and cleanups.
 
-[decred.org](https://github.com/decred/dcrweb): add 3rd party wallets, remove web wallet, multiple fixes.
+[decred.org](https://github.com/decred/dcrweb): added 3rd party wallets, removed inactive PoW pools, removed web wallet and multiple fixes.
 
 @Richard-Red is collecting all Decred-related GitHub repositories in this [curated list](https://github.com/RichardRed0x/decred-on-github)
 
@@ -73,12 +73,12 @@ Meet our 17th voting service provider: [decredvoting.com](https://decredvoting.c
 Three more wallets integrated Decred in September:
 
 * [Atomic](https://atomicwallet.io/) desktop [added](https://twitter.com/atomicwallet/status/1042032573168476160) Decred in version 0.1.31. The team [answered](https://www.reddit.com/r/decred/comments/9igvgg/warm_welcome_decred_in_atomic_swap_wallet/e6lki2j/) many questions on Reddit. 
-* [AnyBit](https://www.anybit.io/) wallet [added](https://twitter.com/decredproject/status/1043228642992640000) Decred. Notably, source code is open for their [Android](https://github.com/AnyBitIO/anybit-Android) and [iOS](https://github.com/AnyBitIO/anybit-iOS) wallets.
+* [AnyBit](https://www.anybit.io/) wallet [added](https://twitter.com/decredproject/status/1043228642992640000) Decred. It features built-in price and news tracking. Notably, the source code is open for their [Android](https://github.com/AnyBitIO/anybit-Android) and [iOS](https://github.com/AnyBitIO/anybit-iOS) wallets.
 * [Cobo](https://cobo.com/) wallet [added](https://twitter.com/decredproject/status/1045765231157399554) Decred support into their Android and iOS wallets.
 
-ChangeNow [announced](https://www.reddit.com/r/decred/comments/9f7nga/decred_is_now_available_on_changenows_android_app/) Decred addition to their Android app that does accountless swaps.
+ChangeNow [announced](https://www.reddit.com/r/decred/comments/9f7nga/decred_is_now_available_on_changenows_android_app/) Decred addition to their Android app that allows accountless swaps between 150+ assets.
 
-Coinbase [launched](https://twitter.com/coinbase/status/1045813201508524032) informational [asset pages](https://blog.coinbase.com/experimenting-with-educational-asset-pages-b0b4d54b887b) for top 50 coins by market cap, which includes Decred. First the pages [started showing](https://www.bitguru.co.uk/crypto-news/coinbase-error-shows-44-additional-cryptocurrencies-on-the-app/) in the Coinbase app for a small group of testers, and later they released their [price dashboard](https://www.coinbase.com/price). Interestingly, Decred is #25 on that list while it is #30 on [coinmarketcap](https://coinmarketcap.com/) as of writing.
+Coinbase [launched](https://twitter.com/coinbase/status/1045813201508524032) informational [asset pages](https://blog.coinbase.com/experimenting-with-educational-asset-pages-b0b4d54b887b) for top 50 coins by market cap, including Decred. First the pages [started showing](https://www.bitguru.co.uk/crypto-news/coinbase-error-shows-44-additional-cryptocurrencies-on-the-app/) in the Coinbase app for a small group of testers, and later the web [price dashboard](https://www.coinbase.com/price) went live. Interestingly, Decred is #25 on that list while it is #30 on [coinmarketcap](https://coinmarketcap.com/) as of writing.
 
 ## Adoption
 
