--- a/journal/201809.md
+++ b/journal/201809.md
@@ -82,14 +82,7 @@ Coinbase [launched](https://twitter.com/coinbase/status/1045813201508524032) inf
 
 ## Adoption
 
-Birth certificate registered on Decred chain:
-
-* https://twitter.com/livecoinsbr/status/1040370156709584897
-* https://twitter.com/OriginalMyCom/status/1041769490768437249
-* https://livecoins.com.br/registro-de-nascimento-em-blockchain/
-* https://www.criptomoedasfacil.com/brasileiro-realiza-primeiro-registro-de-nascimento-na-blockchain-da-decred/
-* https://www.cryptovibes.com/crypto-news/the-world-first-newborn-registered-on-decred-dcr-blockchain-is-a-brazilian/
-* https://twitter.com/decredproject/status/1046150896583888896
+The birth of a Brazilian girl was registered on the Decred blockchain using OriginalMy, a blockchain proof of authenticity services provider. Read the full story in [Portuguese](https://www.criptomoedasfacil.com/brasileiro-realiza-primeiro-registro-de-nascimento-na-blockchain-da-decred/) and in [English](https://www.cryptovibes.com/crypto-news/the-world-first-newborn-registered-on-decred-dcr-blockchain-is-a-brazilian/).
 
 ## Marketing
 
