Integ: add splitting story

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -66,7 +66,11 @@ Bitmain has finally [entered](https://twitter.com/antminer_main/status/104384421
 
 ## Integrations
 
-Meet our 17th voting service provider: [decredvoting.com](https://decredvoting.com/). Operated by [@david](https://decred.slack.com/team/U0RTS3P98), it has 2% fee and is the second provider after [decredbrasil.com](https://stake.decredbrasil.com/) to support [ticket splitting](https://decredvoting.com/ticketsplitting). Reddit thread is [here](https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/).
+Meet our 17th voting service provider: [decredvoting.com](https://decredvoting.com/). It is operated by [@david](https://decred.slack.com/team/U0RTS3P98), has 2% fee and supports [ticket splitting](https://decredvoting.com/ticketsplitting). Reddit thread is [here](https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/).
+
+For a historical note, the first VSP to support ticket splitting was [decredbrasil.com](https://stake.decredbrasil.com/):
+
+> @girino: @matheusd started tests on testnet several months ago. I contacted him so we could integrate with the pool in June this year. We set up the machine in July and bought the first split ticket on mainnet, using the decredbrasil pool, on July 19. It was voted on July 30. After this first vote on mainnet, we opened the tests to selected users (with more technical background) on the pool. In August we opened the tests to everyone, and would call people who want to join to the #ticket_splitting channel, or to our own Slack (in Portuguese, so mostly Brazilian users). We have 28 split tickets already voted, and 16 are live. So little more than 40 split tickets total were bought on decredbrasil pool.
 
 [KuCoin](https://www.kucoin.com/) exchange [listed](https://news.kucoin.com/en/decred-dcr-gets-listed-on-kucoin/) DCR/BTC and DCR/ETH pairs. To celebrate their anniversary they had a 99% trading fees [discount](https://news.kucoin.com/en/99-discount-over-the-trading-fees-on-dcr-trading-pairs/) on DCR pairs for 2 weeks.
 
