Remove Marketing section

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -88,10 +88,6 @@ Coinbase [launched](https://twitter.com/coinbase/status/1045813201508524032) inf
 
 The birth of a Brazilian girl was registered on the Decred blockchain using OriginalMy, a blockchain proof of authenticity services provider. Read the full story in [Portuguese](https://www.criptomoedasfacil.com/brasileiro-realiza-primeiro-registro-de-nascimento-na-blockchain-da-decred/) and in [English](https://www.cryptovibes.com/crypto-news/the-world-first-newborn-registered-on-decred-dcr-blockchain-is-a-brazilian/).
 
-## Marketing
-
-Targeted advertising report for {month} was posted by @{}. {short recap}. Read more [here]({link}).
-
 ## Events
 
 Attended:
@@ -166,18 +162,18 @@ Articles:
 
 Community stats:
 
-* Twitter followers {} (+{})
-* Reddit subscribers {} (+{})
-* Matrix users {} (+{})
-* Slack users {} (+{})
-* YouTube subscribers {} (+{})
-* Facebook {} (+{}) followers and {} (+{}) likes
-* GitHub {} (+{}) stars and {} (+{}) forks of dcrd repository
+* Twitter followers 39,784 (+192)
+* Reddit subscribers 8,784 (+153)
+* Matrix users 187 (+24)
+* Slack users 6,149 (+82)
+* YouTube subscribers 3,718 (+51)
+* Facebook 3,060 (+12) followers and 2,826 (+12) likes
+* GitHub 419 (+2) stars and 1,073 (+52) forks of dcrd repository
 
 Comm systems news:
 
-* writers_room bridged to Matrix
-* One {two?} work channels migrated to Matrix
+* #writers_room was bridged to Matrix.
+* Several work channels were migrated to Matrix.
 
 Highlights:
 
