--- a/journal/201809.md
+++ b/journal/201809.md
@@ -187,13 +187,11 @@ Chats: [skills](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$15362
 
 ## Markets
 
-On Sep 6 DCR revisited USD {} / BTC 0.0054 when BTC quickly dropped from USD 7300 to 6400
+In September DCR was holding between USD 34-45 / BTC 0.0054-0.0063. On Sep 6 DCR revisited the bottom of USD 34 / BTC 0.0054 when BTC quickly dropped from USD 7300 to 6400. On Sep 14 a small price rise coincided with both the start of KuCoin trading and hashrate spike to 104 PH/s. Looking at [coinmarketcap](https://coinmarketcap.com/currencies/decred/#charts) charts, the trading volume is a bit lower than in July and August.
 
-As of Sep 7, Decred is #13 by the number of daily active addresses with 10k addresses, and #9 by the USD cost of daily issuance with $180k.
+As of Oct 4, Decred is #18 by the number of daily transactions (3,200), and #9 by the USD value of daily issuance with ($230k). (source: [onchainfx](https://onchainfx.com/))
 
-Sep 14 price recovery coincided with KuCoin trading start and hashrate spike to 104 PH/s.
-
-Interesting: dcr locked testing 2018 high while we sit at 2018 lows in price https://twitter.com/ImacallyouJawdy/status/1039922979973476352
+Interesting [observation](https://twitter.com/ImacallyouJawdy/status/1039922979973476352) by [@ImacallyouJawdy](https://twitter.com/ImacallyouJawdy): while we sit at 2018 price lows the amount locked in tickets is testing 2018 high.
 
 ## Relevant External
 
