Sep18: info from raedah

--- a/journal/201809.md
+++ b/journal/201809.md
@@ -24,13 +24,19 @@ Developers are welcome to comment on [this idea](https://github.com/decred/dcrwa
 
 [Android](https://github.com/decred/dcrandroid): update from @collins: "Second test release for dcrandroid is out. Major bugs have been fixed since last test. Latest code from SPV sync has been integrated. Once again, bug reports are welcome and issues can be opened [on GitHub](https://github.com/decred/dcrandroid/issues)". Ask in #dev room about the APK for testing.
 
-Overall the app is quite stable and accepting more testers. A new security page was added that allows to validate addresses and to sign/verify messages, similar to Decrediton's Security Center. Work on translations is beginning.
+A new security page was added that allows to validate addresses and to sign/verify messages, similar to Decrediton's Security Center. Work on translations is beginning.
 
-[iOS](https://github.com/raedahgroup/dcrios): the app started accepting testers last week. @macsleven: "the test version of Decred Wallet for iOS is available, we have a link for installing the app but the builds currently require your UDID. Contact either @macsleven or @raedah with your UDID if you would like to help test."
+Overall the app is quite stable and accepting more testers. Next milestone is getting the test app on the app store.
+
+[iOS](https://github.com/raedahgroup/dcrios): the app started accepting testers last week. @macsleven: "the test version of Decred Wallet for iOS is available, we have a link for installing the app but the builds currently require your UDID. Contact either @macsleven or @raedah with your UDID if you would like to help test.".
+
+Nearest goal is to make the app crash free.
 
 Both mobile apps received new desigh themes.
 
-[dcrdata](https://github.com/decred/dcrdata): v3.0 was released for mainnet! Highlights: [charts](https://explorer.dcrdata.org/charts), "merged debits" view, [agendas](https://explorer.dcrdata.org/agendas) page, Insight API support, side chain tracking, Go 1.11 support with module builds, numerous backend improvements. Full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.0.0). [9 contributors](https://twitter.com/chappjc/status/1039172760143060994) made it happen. Project lead @chappjc [notes](https://twitter.com/chappjc/status/1039173243452772353): "This collaboration with @raedahgroup on our own block explorer and web API for @decredproject has been super productive."
+[dcrdata](https://github.com/decred/dcrdata): v3.0 was released for mainnet! Highlights: [charts](https://explorer.dcrdata.org/charts), "merged debits" view, [agendas](https://explorer.dcrdata.org/agendas) page, Insight API support, side chain tracking, Go 1.11 support with module builds, numerous backend improvements. Full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.0.0). This release featured [9 contributors](https://twitter.com/chappjc/status/1039172760143060994), and as project lead @chappjc [noted](https://twitter.com/chappjc/status/1039173243452772353): "This collaboration with @raedahgroup on our own block explorer and web API for @decredproject has been super productive.".
+
+Up next is supporting dynamic page widths site wide and deploying new visual blocks [home page](https://github.com/decred/dcrdata/pull/718).
 
 Trezor: proof of concept implementation for Trezor Model T firmware is [in the works](https://github.com/trezor/trezor-core/pull/358) (previous work was for Model One).
 
