--- a/journal/201809.md
+++ b/journal/201809.md
@@ -109,7 +109,7 @@ Attended:
 * Raedah Group went on the streets of Portland, USA with a pretty blue tent. ([photos](https://twitter.com/raedahgroup/status/1039315242684166144))
 * [Manual Blockchain](https://www.manualblockchain.com.br/blockchain-governanca) in Sao Palo, Brazil.
 * [CryptoFacil Summit](http://criptomoedasfacil.com/criptofacilsummit-rj) in Rio de Janeiro, Brazil. ([photos](https://matrix.decred.org/_matrix/media/v1/download/decred.org/ylDjMVQqRkecYMYRSGHEkMDk))
-* [Meetup](https://www.facebook.com/events/237334670264359/) at Binzantin Cafe in Taipei, Taiwan. @morphymore: "There were 20-ish attendees, and about half of them have joined the Chinese FB group. Most of them don’t hear about Decred before, but have expressed the interest in learning more about it after the event. Overall, it’s a good exposure for Decred in the Taiwan community.". A report with photos was posted [on Facebook](https://www.facebook.com/Bitzantin.tw/posts/1152076621613700), more photos are [here](https://twitter.com/Decred_TW/status/1041217784762359808) and [here](https://photos.app.goo.gl/DtFEruEiK4TUFq8i8).
+* [Meetup](https://www.facebook.com/events/237334670264359/) at Binzantin Cafe in Taipei, Taiwan. @morphymore: "There were 20-ish attendees, and about half of them have joined the Chinese FB group. Most of them don't hear about Decred before, but have expressed the interest in learning more about it after the event. Overall, it's a good exposure for Decred in the Taiwan community.". A report with photos was posted [on Facebook](https://www.facebook.com/Bitzantin.tw/posts/1152076621613700), more photos are [here](https://twitter.com/Decred_TW/status/1041217784762359808) and [here](https://photos.app.goo.gl/DtFEruEiK4TUFq8i8).
 * @joshuam made a Decred Jacket appearance at Singapore Grand Prix. ([photos](https://twitter.com/joshuam_/status/1041601668708622336))
 * [NewTech PDX](https://www.meetup.com/NewTechPDX/events/252679869/) meetup in Portland, USA. Raedah Group presented Decred and reported "lots of new converts". ([photos](https://twitter.com/raedahgroup/status/1042190448092164096))
 * [North Shore Bitcoin & Blockchain](https://www.meetup.com/North-Shore-Bitcoin-Blockchain/events/cgxxzpyxpbcc/) in Glenview, USA. @dustorf gave a five minute overview of Decred and [noted](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$1538066653383838ePpbA:matrix.org): "There were only about 25 people, but about 1/3 of them were aware of Decred prior. (...) Our simple presence and explanation of the project moved opinion from 'another shitcoin they sold after mining' to 'an interesting and viable project worthy of further investigation'.". (photos: [1](https://twitter.com/cenaclecapital/status/1045288205279535104) [2](https://twitter.com/cenaclecapital/status/1045288244861177857))
@@ -123,7 +123,7 @@ Upcoming:
 * [Texas Bitcoin Conference](https://texasbitcoinconference.com/) Austin, USA on Oct 27-28. @BAB: "The great thing about this is that it will also be a Decred Summit. We will have half of the conference dedicated to Decred topics, updates, etc."
 * [Websummit](https://websummit.com/) in Lisbon, Portugal on Nov 5-8. Marco Peerboom will be on a panel discussing "2018: A Rollercoaster Year for Cryptocurrencies"
 
-We’ll begin shortly reviewing conferences and events planned for the first half of 2019. Highlights are sure to include The North American Bitcoin Conference in Miami, January 16-18, and Consensus in NYC, May 14-16. If you have suggestions of events or conferences Decred should attend, please share them in [#event_planning](https://riot.im/app/#/room/#event_planning:decred.org). In 2019, we would like to expand our presence in Europe, Asia, and South America, and we’re looking for community members to help identify and staff those events.
+We'll begin shortly reviewing conferences and events planned for the first half of 2019. Highlights are sure to include The North American Bitcoin Conference in Miami, January 16-18, and Consensus in NYC, May 14-16. If you have suggestions of events or conferences Decred should attend, please share them in [#event_planning](https://riot.im/app/#/room/#event_planning:decred.org). In 2019, we would like to expand our presence in Europe, Asia, and South America, and we're looking for community members to help identify and staff those events.
 
 ## Media
 
@@ -170,8 +170,8 @@ Articles:
 * What is Decred and is it a Credible Blockchain Project? ([blockchainreporter.net](http://www.blockchainreporter.net/2018/09/16/what-is-decred-dcr-and-is-it-a-credible-blockchain-project/))
 * Governing Decentralization: How On-Chain Voting Protocols Operate and Vary ([cointelegraph.com](https://cointelegraph.com/news/governing-decentralization-how-on-chain-voting-protocols-operate-and-vary), Spanish version [here](https://es.cointelegraph.com/news/governing-decentralization-how-on-chain-voting-protocols-operate-and-vary))
 * Decred: A virtual currency with a hybrid approval system combining PoW and PoS (Japanese, [cryptocurrency.theater](https://cryptocurrency.theater/5340/), _Ed: excellent domain name_)
-* What is Blockchain Governance? Complete Beginner’s Guide ([blockonomi.com](https://blockonomi.com/blockchain-governance/))
-* Antminer DR3 - Bitmain’s Next Target Is Decred ([cryptodisrupt.com](https://cryptodisrupt.com/antminer-dr3-bitmains-next-target-is-decred/))
+* What is Blockchain Governance? Complete Beginner's Guide ([blockonomi.com](https://blockonomi.com/blockchain-governance/))
+* Antminer DR3 - Bitmain's Next Target Is Decred ([cryptodisrupt.com](https://cryptodisrupt.com/antminer-dr3-bitmains-next-target-is-decred/))
 * Q4 2018 Bitcoin Mining Projections ([theminersunion.com](http://theminersunion.com/2018/09/25/q4-2018-bitcoin-mining-projections/), [snapshot](https://archive.today/oquRM) for non-js readers)
 * What is Decred? ([cryptofinance24.com](http://cryptofinance24.com/what-is-decred-p424-169.htm))
 
