--- a/journal/201809.md
+++ b/journal/201809.md
@@ -88,7 +88,7 @@ Three more wallets integrated Decred in September:
 
 ChangeNow [announced](https://www.reddit.com/r/decred/comments/9f7nga/decred_is_now_available_on_changenows_android_app/) Decred addition to their Android app that allows accountless swaps between 150+ assets.
 
-Coinbase [launched](https://twitter.com/coinbase/status/1045813201508524032) informational [asset pages](https://blog.coinbase.com/experimenting-with-educational-asset-pages-b0b4d54b887b) for top 50 coins by market cap, including Decred. First the pages [started showing](https://www.bitguru.co.uk/crypto-news/coinbase-error-shows-44-additional-cryptocurrencies-on-the-app/) in the Coinbase app for a small group of testers, and later the web [price dashboard](https://www.coinbase.com/price) went live. Interestingly, Decred is #25 on that list while it is #30 on [coinmarketcap](https://coinmarketcap.com/) as of writing.
+Coinbase [launched](https://twitter.com/coinbase/status/1045813201508524032) informational [asset pages](https://blog.coinbase.com/experimenting-with-educational-asset-pages-b0b4d54b887b) for top 50 coins by market cap, including Decred. First the pages [started showing](https://www.bitguru.co.uk/crypto-news/coinbase-error-shows-44-additional-cryptocurrencies-on-the-app/) in the Coinbase app for a small group of testers, and later the web [price dashboard](https://www.coinbase.com/price) went live.
 
 ## Adoption
 
@@ -135,7 +135,7 @@ September issue of Chinese CCID ratings was [published](http://special.ccidnet.c
 
 Videos:
 
-* The underbelly of blockchain Governance - fiat licensing and our code with Marco Peerboom and Chris DeRose ([youtube](https://www.youtube.com/watch?v=6gJomFcj4DQ), [tweet](https://twitter.com/derose/status/1039177813448900608), missed in August issue)
+* The underbelly of blockchain Governance - fiat licensing and our code with Marco Peerboom and Chris DeRose ([youtube](https://www.youtube.com/watch?v=6gJomFcj4DQ), [tweet](https://twitter.com/derose/status/1039177813448900608), [r/decred](https://www.reddit.com/r/decred/comments/9fawgp/the_underbelly_of_blockchain_governance_fiat/), missed in August issue)
 
   Insightful dialogue about men's underwear, licenses, subtleties of GPL, BSD wars, tiling window managers and much more.
 * Introduction to Decred (Korean, [youtube](https://www.youtube.com/watch?v=gTgGUlcNTd0))
@@ -170,7 +170,7 @@ Articles:
 * What is Decred and is it a Credible Blockchain Project? ([blockchainreporter.net](http://www.blockchainreporter.net/2018/09/16/what-is-decred-dcr-and-is-it-a-credible-blockchain-project/))
 * Governing Decentralization: How On-Chain Voting Protocols Operate and Vary ([cointelegraph.com](https://cointelegraph.com/news/governing-decentralization-how-on-chain-voting-protocols-operate-and-vary), Spanish version [here](https://es.cointelegraph.com/news/governing-decentralization-how-on-chain-voting-protocols-operate-and-vary))
 * Decred: A virtual currency with a hybrid approval system combining PoW and PoS (Japanese, [cryptocurrency.theater](https://cryptocurrency.theater/5340/), _Ed: excellent domain name_)
-* What is Blockchain Governance? Complete Beginner's Guide ([blockonomi.com](https://blockonomi.com/blockchain-governance/))
+* What is Blockchain Governance? Complete Beginner's Guide ([blockonomi.com](https://blockonomi.com/blockchain-governance/), discussion on [r/decred](https://www.reddit.com/r/decred/comments/9hqakq/what_is_blockchain_governance_complete_guide/))
 * Antminer DR3 - Bitmain's Next Target Is Decred ([cryptodisrupt.com](https://cryptodisrupt.com/antminer-dr3-bitmains-next-target-is-decred/))
 * Q4 2018 Bitcoin Mining Projections ([theminersunion.com](http://theminersunion.com/2018/09/25/q4-2018-bitcoin-mining-projections/), [snapshot](https://archive.today/oquRM) for non-js readers)
 * What is Decred? ([cryptofinance24.com](http://cryptofinance24.com/what-is-decred-p424-169.htm))
@@ -196,7 +196,7 @@ Highlights:
 
   > The trouble with infrastructure, "thin" protocols in particular, is that someone has to build them at a cost. e.g. LN takes a ton of work, doesn't necessarily generate value itself, but it magnifies the value of BTC or whatever coin that uses it. I see the DEX in a similar light - whoever creates it is not going to make a bunch of money from it, but it will magnify the value of the underlying asset(s) that end up having a deep order book on the DEX. (@jy-p in [#dex](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15369779137110eyQvt:decred.org))
 
-Reddit: [question](https://www.reddit.com/r/decred/comments/9fkhzg/planned_implimtations_of_buyer_protections_in_the/) about buyer protections, [dcrtime](https://www.reddit.com/r/decred/comments/9fu2b5/questions_regarding_dcrtime/), a [proposal](https://www.reddit.com/r/decred/comments/9g0c2f/proposal_uct_hoodie_sponsor/) to sponsor hoodies in the University of Cape Town.
+Reddit: yet another strong [pitch](https://www.reddit.com/r/CryptoCurrency/comments/9c9x4v/daily_discussion_megathread_september_2_2018/e5afvv6/?context=1) by @solar; [question](https://www.reddit.com/r/decred/comments/9fkhzg/planned_implimtations_of_buyer_protections_in_the/) about buyer protections; [dcrtime](https://www.reddit.com/r/decred/comments/9fu2b5/questions_regarding_dcrtime/) internals; a [proposal](https://www.reddit.com/r/decred/comments/9g0c2f/proposal_uct_hoodie_sponsor/) to sponsor hoodies in the University of Cape Town; Lightning Network [support](https://www.reddit.com/r/decred/comments/9jof7l/lightning_network/) for altcoins.
 
 Chats: [skills](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1536254775350XgGZM:decred.org) to operate a stakepool; [voting details](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1536282670992Lzaxm:decred.org): 2 of 3 votes can approve a block, what votes really approve are regular tx, etc; scriptless script [atomic swaps](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15363399581416GcSxk:decred.org) using Schnorr adaptor signatures; [dev dashboard](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$15366012302783HCseB:decred.org), choosing work, people do best when working on what interests them most; [opportunities](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15365843362546GFEco:decred.org) for governments and enterprise for anchoring legal data to blockchain; [terminology](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org/$15365959712739RwKzS:decred.org): DAO vs DAE; [human-friendly payments](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15366212803111onRuk:decred.org), sharing xpub vs payment protocols; [funding](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15367076584151CZzGw:decred.org) btcsuite development; Politeia [vote types](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$15367054844084keNyd:decred.org): approval vote, sentiment vote and a defund vote, also linking proposals and financial statements; [algo trading](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$15367708134607anafN:decred.org) and programming languages (yes, on #trading!); [alternative implementation](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15368126254994dmgGz:decred.org), C/C++/Go/Rust; [HFTs](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$15368550325539BXZgQ:decred.org), algo trading, fake volume and slippage; [offline wallets](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$15368387415218SwJEs:decred.org), usb/write-only media/optical scanners vs auditing traffic between dcrd and dcrwallet; [Proof of Activity](https://riot.im/app/#/room/!lbzTjhzNbIaDbuAxkS:decred.org/$15369345446336QswCH:decred.org) did not inspire Decred but spurred Decred to get moving, Wikipedia page hurdles; [how](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15369950287130SsqHs:decred.org) stakeholders could veto blocks; [how many](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$15372272758102GSbMW:decred.org) votes are needed to approve a proposal; [why](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$15372760218373lJZBH:decred.org) Decrediton uses Electron; [CVE-2018-17144](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153755480811319lDgLg:decred.org) and over-dependence on single Bitcoin implementation, btcsuite, fuzz testing; tracking [proposal progress](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$15373927039908qzFSi:decred.org) after voting and funding; [why](https://riot.im/app/#/room/!dhHYPTtCtvPSUfTepT:decred.org/$153745237210372jSYvO:decred.org) the wallet does not store the seed at all; power connectors, electricity, wiring and [fire safety](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153781550312816lSboL:decred.org); reasonable [spendings](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153781704512850QVMij:decred.org) from project fund; [ways](https://riot.im/app/#/room/!LmKzrmxJIXNHNiEmIh:decred.org/$153781182112736HAaYg:decred.org) to measure sync progress better than block height; [using Politeia](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153797746114229LqTyT:decred.org) without email address; [concurrency in Go](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153813778015922LZeWW:decred.org), locks vs channels.
 
